hphp/hack/test/typecheck/reified_generics/class-method-access.php.exp
File "class-method-access.php", line 9, characters 9-9:
No static method 'f' in C (did you mean instance method 'f'?) (Typing[4090])
File "class-method-access.php", line 3, characters 7-7:
Declaration of C is here
